[package]
name = "darling_packages"
version = "0.1.0"
authors = ["Violet Iapalucci"]
description = "A declarative and extendable package manager."
edition = "2021"
license = "MIT"

[[bin]]
name = "darling"
path = "src/main.rs"

[dependencies]
toml = "0.8.12"
anyhow = "1.0.81"
colored = "2.1.0"
unindent = "0.2.3"
toml_edit = "0.22.9"
regex-macro = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }
darling-api = "0.1.0"
darling-arch = "0.1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
